# Onboarding-SMDDP

./: README.md
E01-CMake/: CMakeLists.txt  Hello_World.c  Hello_World.s  a.out
E02-MPI/: CMakeLists.txt  mpi_hello_world.cc
E03-Memory/: CMakeLists.txt  README.md  memory.cc
E04-MPI+GPU/: CMakeLists.txt  README.md  mpi+gpu.cc
E05-NCCLAR/: CMakeLists.txt  ncclar.cpp  ncclar.hpp  output.txt
E05-NCCLAR/cmake/modules/: FindNCCL.cmake
E06-pthread/: CMakeLists.txt  mySemaphore.hpp  pthread.cpp
E07-SIMD/: CMakeLists.txt  avxloop.cpp  output_avxloop_096.txt  output_avxloop_100.txt  output_avxloop_103.txt  output_stdrand.txt  simd.cpp
E07-SIMD/output/: output_urandom.txt
E08-PyTorch/: log.txt  pt_mnist_cnn.ipynb
E09-native_PTDDT/: main.py  out.txt  run.sh
E10-custom_PTDDT/: main.py  run.sh
E10-custom_PTDDT/logs/: log_proc_00.txt  log_proc_01.txt  log_proc_02.txt  log_proc_03.txt  log_proc_04.txt  log_proc_05.txt  log_proc_06.txt  log_proc_07.txt
E11-collective/: collective.py  run.sh
E11-collective/logs/: log_shared.txt
